--- a/AuthenticationSdk/CyberSource.Authentication.Core.csproj
+++ b/AuthenticationSdk/CyberSource.Authentication.Core.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Company>CyberSource</Company>
     <Version>0.0.0.7</Version>
+    <PublishSingleFile>true</PublishSingleFile>
   </PropertyGroup>
 
   <ItemGroup>
