--- a/CyberSource.Rest.Client.Core.csproj
+++ b/CyberSource.Rest.Client.Core.csproj
@@ -3,13 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Company>CyberSource (released by BrutalDev)</Company>
-    <Version>0.0.1.6</Version>    
+    <Version>0.0.1.7</Version>    
     <PublishSingleFile>true</PublishSingleFile>    
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>    
     <Description>.NET Core port of the official CyberSource.Rest.Client package.
 https://github.com/CyberSource/cybersource-rest-client-dotnet/issues/14</Description>    
     <Copyright>CyberSource</Copyright>    
-    <PackageProjectUrl>https://github.com/brutaldev/cybersource-rest-client-dotnet</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/brutaldev/cybersource-rest-client-dotnet</PackageProjectUrl>    
+    <PackageLicenseExpression></PackageLicenseExpression>    
+    <PackageLicenseFile>license.txt</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,6 +24,10 @@ https://github.com/CyberSource/cybersource-rest-client-dotnet/issues/14</Descrip
     <None Remove="AuthenticationSdk\**" />
     <None Remove="packages\**" />
     <None Remove="test\**" />
+    <None Include="license.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
@@ -29,10 +35,10 @@ https://github.com/CyberSource/cybersource-rest-client-dotnet/issues/14</Descrip
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="jose-jwt" Version="2.5.0" />
+    <PackageReference Include="jose-jwt" Version="2.6.1" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="RestSharp" Version="106.11.4" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
     <PackageReference Include="System.Runtime.Caching" Version="4.7.0" />
